# xhookDemo

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/xhook/: CMakeLists.txt
app/src/main/java/com/example/myapplication/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
